# profit-step

./: .env.example  .env.local.example  .env.test  .firebaserc  .firebaserc.example  .gitignore  .oxfmtrc.jsonc  .oxlintrc.json  ANTI_LOOP_CI_CD_GUIDE.md  ARCHITECTURE_DIAGRAM.md  AUDIT_REPORT.md  AUTH_MODULE_README.md  BOT_AND_API_REFERENCE.md  BUDGET_ALERTS_SETUP.md  CLAUDE.md  CODE_ARCHITECTURE.md  DEFENSIVE_PROGRAMMING_GUIDE.md  DEPLOYMENT_SUCCESS.md  DEVELOPER_GUIDE.md  EMULATORS_TESTING.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_PLAN_V2.md  MONITORING_STATUS.md  OPENCLAW_AGENT_GUIDE.md  OPENCLAW_AGENT_INTEGRATION_GUIDE.md  POST_DEPLOYMENT_SUMMARY.md  PRODUCTION_MONITORING_REPORT.md  PROJECT_MAP.md  PROJECT_WORKFLOW_SPEC_V1.md  QA_IMPLEMENTATION_COMPLETE.md  QA_TEST_PLAN.md  QUICK_SETUP_GUIDE.md  README.md  SECURITY_IMPROVEMENTS.md  TEST_BREVO_WEBHOOK.md  TEST_RESULTS_SUCCESS.md  TEST_V2_GUARDS.md  TODO_FUTURE_IMPROVEMENTS.md  WAREHOUSE_API_GUIDE.md  artillery-load-test.yml  (+17 more)
sdk/python/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
sdk/python/examples/: 01_smoke_check.py  02_daily_report.py  03_webhook_subscriber.py
sdk/python/profit_step_agent/: __init__.py  agent.py  cli.py  client.py  exceptions.py
sdk/python/profit_step_agent/domains/: __init__.py  clients.py  costs.py  events.py  inventory.py  payroll.py  projects.py  tasks.py  time.py  webhooks.py
sdk/python/profit_step_agent/models/: __init__.py  clients.py  common.py  costs.py  events.py  inventory.py  tasks.py  (+4 more)
sdk/python/tests/: test_client.py  test_domains.py  test_inventory.py  test_webhooks.py
(+1475 files in other folders)
