[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "profit-step-agent"
version = "0.2.0"
description = "Python SDK for Profit Step CRM Agent API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "GARKOR Corp", email = "dev@garkor.com" }]

dependencies = [
    "httpx>=0.27,<1.0",
    "pydantic>=2.5,<3.0",
    "click>=8.1,<9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
]

[project.scripts]
psa = "profit_step_agent.cli:main"

[tool.setuptools.packages.find]
include = ["profit_step_agent*"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
